<resources>
    <string name="app_name">MyFirstCode</string>
    <string name="change_text">Change Text</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">Unbind Service</string>
    <string name="bind_intent_service">Bind Intent Service</string>

</resources>
