<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.djf.myfirstcode.myfirstcode.chapter10.MainActivity">
    <Button
        android:id="@+id/start"
        android:text="@string/start_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/stop"
        android:text="@string/stop_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/bind"
        android:text="@string/bind_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
    android:id="@+id/unbind"
    android:text="@string/unbind_service"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    <Button
        android:id="@+id/bind_intent_service"
        android:text="@string/bind_intent_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
